[package]
name = "lmprs2"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.5", features = ["rand"] }
hex = "0.4.3"
lightning = { git = "https://github.com/JeremiahR/rust-lightning.git", branch = "mod_for_lmp" }
secp256k1 = { version = "0.30.0", features = ["rand"] }
tokio = { version = "1.43.0", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
